--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 title: Asif Hasan Zeshan
 description: text below image
 show_downloads: true
-remote_theme: pages-themes/tactile@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-tactile
