--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Asif Hasan Zeshan
-description: text below image
+description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
 show_downloads: true
 theme: jekyll-theme-tactile
