--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Asif Hasan Zeshan
 description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-tactile
