--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Asif Hasan Zeshan
-logo: /assets/img/headshot.png
+logo: /assets/img/Headshot.png
 description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
 show_downloads: false
 theme: jekyll-theme-tactile
