--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Asif Hasan Zeshan
 logo: /assets/img/Headshot.png
+![Headshot](https://github.com/zeshan67/aboutme/assets/94588272/3b749631-c335-49a4-96dd-24fd09e01f9b)
 description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
 show_downloads: false
 theme: jekyll-theme-tactile
