--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Asif Hasan Zeshan
 logo: /assets/img/Headshot.png
 description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
 show_downloads: false
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
