--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 title: Asif Hasan Zeshan
 logo: /assets/img/Headshot.png
 description: Architect, Computational Design Researcher & Advocate for universally accessible public spaces
+
+<i class="fa-brands fa-linkedin"></i> [Linkedin](https://www.linkedin.com/in/zeshan67/)
+[Website](https://www.asifhasanzeshan.xyz/)
+
 show_downloads: false
 theme: jekyll-theme-minimal
